Modify creating_project.md